# guitaracc

./: .gitignore  ARCHITECTURE.md  CLI.md  Makefile  NORDIC_APPLICATION.md  README.md
.github/: copilot-instructions.md
.github/skills/guitaracc-build/: README.md  SKILL.md
.github/skills/guitaracc-build/scripts/: build.sh
.github/skills/guitaracc-cli-commands/: SKILL.md
.github/skills/guitaracc-test-script/: SKILL.md  template.py
basestation/: .gitignore  ACCEL_ROTATION_PIPELINE.md  ARCHITECTURE.md  BUILD_SYSTEM.md  CMakeLists.txt  CONFIG_STORAGE.md  FEATURE_VIRTUAL_PORTS.md  Kconfig  MAPPING.md  PIPELINE_MONITORING_VERIFICATION.md  REFACTORING.md  TEST_SCRIPTS.md  TEST_STATUS_REPORT.md  UI_INTERFACE.md  UI_VIRTUAL_PORTS.md  VERSIONING.md  app.overlay  check_flash.py  cmake_init.cmake  config_tool.py  hci_ipc.overlay  prj.conf  read_boot_log.py  run_regression_tests.sh  select_port.py  test_accel_deadzone.py  test_config.py  test_midi_rx.py  test_persistence.py  test_shell.py  test_ui.py  test_vports_integration.py  verify_export_import.py  verify_patch_count.py
basestation/boards/: nrf5340_audio_dk_nrf5340_cpunet.overlay
basestation/cli_tests/: README.md  test_config.py  test_midi_rx.py  test_persistence.py  test_pipeline_validation.py  test_shell.py  test_shell_direct.py  verify_export_import.py  verify_patch_count.py
basestation/cli_tests/broken/: README.md  test_pipeline_monitor.py  test_ui.py
basestation/cli_tests/non-working/: README.md  test_accel_deadzone.py  test_config_commands.py  test_json_output.py  test_midi_rt_tx.py  test_shell_simple.py
basestation/src/: accel_mapping.c  accel_mapping.h  config_storage.c  config_storage.h  function_units.c  function_units.h  main.c  midi_logic.c  midi_logic.h  topology_config.c  topology_config.h  topology_processor.c  topology_processor.h  ui_interface.c  ui_interface.h  ui_interface_shell.c  ui_led.c  ui_led.h  version.h.in  virtual_ports.c  virtual_ports.h
basestation/test/: Makefile  Makefile.vports  README.md  VALIDATION_EXPLAINED.c  test_accel_mapping  test_accel_mapping.c  test_function_units.c  test_midi_cc.c  test_topology_processor.c  test_virtual_ports.c
client/: ACCELEROMETER.md  ARCHITECTURE.md  CMakeLists.txt  FILTERS.md  prj.conf  sysbuild.cmake
client/src/: main.c  main2.c  motion_logic.c  motion_logic.h
client/sysbuild/: mcuboot.cmake
client/test/: Makefile  test_filters.c  test_motion  test_motion.c
client/test/test_motion.dSYM/Contents/Resources/DWARF/: test_motion
client/test/test_motion.dSYM/Contents/Resources/Relocations/aarch64/: test_motion.yml
docs/specs/: README.md  ble-protocol.md  midi-commands.md  serial-protocol.md
integration_test/: Makefile  README.md  basestation_emulator.c  basestation_emulator.h  ble_hal.c  ble_hal.h  client_emulator.c  client_emulator.h  common_defs.h  test_integration  test_integration.c
